<resources>
    <string name="app_name">CTC</string>
    <string name="share_title">新手注册，乐享壕礼</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan_barcode_title">条形码扫描</string>
    <string name="scan_qrcode_title">二维码扫描</string>
    <string name="scan_allcode_title">二维码或条形码扫描</string>
    <string name="scan_barcode_hint">将条形码对入取景框，即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框，即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>
    <string name="title_activity_sao_mao">SaoMaoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_jump_to">JumpToActivity</string>
    <string name="a1">CTC数字资产交易平台</string>
    <string name="a2">    CTC是一家以全球为基础的数字资产交易平台，提供最大限度的安全性和先进的交易功能，根据最新形势，研发适用于现阶段发展的全新交易模式，致力于打造安全可信赖的数字资产交易平台。</string>
    <string name="a3">支付宝</string>
    <string name="a4">未绑定</string>
    <string name="a5">微信</string>
    <string name="a6">银行卡</string>
    <string name="a7">当前已绑定</string>
    <string name="a8">请确认将要绑定的账号为本人所有 支付宝账号将作为你在交易中的收款账号</string>
    <string name="a9">立即绑定</string>
    <string name="a10">卡号</string>
    <string name="a11">请输入银行卡账号</string>
    <string name="a12">姓名</string>
    <string name="a13">请输入持卡人姓名</string>
    <string name="a14">所属银行</string>
    <string name="a15">请输入所属银行</string>
    <string name="a16">短信验证码</string>
    <string name="a17">请输入短信验证码</string>
    <string name="a18">获取验证码</string>
    <string name="next">下一步</string>
    <string name="a19">温馨提示</string>
    <string name="a20">可用</string>
    <string name="a21">冻结</string>
    <string name="a22">C2C充币</string>
    <string name="a23">C2C提币</string>
    <string name="a24">提币地址</string>
    <string name="a25">输入或长按粘贴地址</string>
    <string name="a26">最小数量0.01</string>
    <string name="a27">全部</string>
    <string name="a28">手续费</string>
    <string name="a29">到账数量</string>
    <string name="a30">提币</string>
    <string name="a31">保存二维码至相册</string>
    <string name="a32">复制地址</string>
    <string name="a33">支付宝转账</string>
    <string name="a34">付款方式</string>
    <string name="a35">所在地</string>
    <string name="a36">中国</string>
    <string name="a37">付款期限</string>
    <string name="a38">分钟</string>
    <string name="a39">买入</string>
    <string name="a40">平台收取1%手续费</string>
    <string name="a41">建议卖出数量为1的倍数</string>
    <string name="a42">金额</string>
    <string name="a43">CNY</string>
    <string name="a44">数量</string>
    <string name="a45">π</string>
    <string name="a46">可用:</string>
    <string name="a47">冻结:</string>
    <string name="a48">买入%1$s</string>
    <string name="a49">点击复制</string>
    <string name="a50">支付宝账号</string>
    <string name="a51">创建订单后，需要与卖家联系确认卖家在线后在付款期限内打款至卖家提供的支付宝/微信/银行账户。转账时备注付款参考号，这样卖家方便看到你的付款然后付款后点击“付款已完成”就可以了。</string>
    <string name="a52">去支付宝转账</string>
    <string name="a53">价格</string>
    <string name="a54">备注:</string>
    <string name="a55">告诉ta您的要求</string>
    <string name="a56">确定</string>
    <string name="a57">客服热线</string>
    <string name="a58">微信号</string>
    <string name="a59">工作时间</string>
    <string name="a60">请在此留下您的宝贵意见!</string>
    <string name="a61">手机号/邮箱：</string>
    <string name="a62">（选填，方便我们联系您）</string>
    <string name="a63">提交</string>
    <string name="a64">请输入手机号码</string>
    <string name="a65">手机短信验证码</string>
    <string name="a66">新密码</string>
    <string name="a67">确认密码</string>
    <string name="a69">密码修改成功</string>
    <string name="a70">立即登录</string>
    <string name="a71">幅</string>
    <string name="a72">量</string>
    <string name="a73">低</string>
    <string name="a74">高</string>
    <string name="a75">分时</string>
    <string name="a76">5分钟</string>
    <string name="a77">30分钟</string>
    <string name="a78">60分钟</string>
    <string name="a79">日线</string>
    <string name="a80">登录</string>
    <string name="a81">注册</string>
    <string name="a82">请输入密码</string>
    <string name="a83">忘记密码</string>
    <string name="a84">请设置昵称(4&#8211;10个字符)</string>
    <string name="a85">请输入验证码</string>
    <string name="a86">设置密码（6&#8211;16位数字字母组合密码）</string>
    <string name="a87">选填(邀请码为您的好友手机号)</string>
    <string name="a88">首页</string>
    <string name="a89">交易</string>
    <string name="a90">资产</string>
    <string name="a100">我的</string>
    <string name="a101">会员套餐</string>
    <string name="a102">交易手续费8折，赠送300积分</string>
    <string name="a103">一年VIP</string>
    <string name="a104">VIP特权</string>
    <string name="a105">总计:</string>
    <string name="a106">支付</string>
    <string name="a107">请输入旧密码</string>
    <string name="a108">新密码,必须包含数字和字母,不少于6位</string>
    <string name="a109">重复输入一次新密码</string>
    <string name="a110">我的奖金</string>
    <string name="a111">我的奖金(USD)</string>
    <string name="a112">邀请人数</string>
    <string name="a113">邀请用户</string>
    <string name="a114">注册日期</string>
    <string name="a115">奖金(USD)</string>
    <string name="a116">申请提现</string>
    <string name="a117">可用积分</string>
    <string name="a118">1积分=1USD</string>
    <string name="a119">积分可用于抵扣交易手续费</string>
    <string name="a120">全部</string>
    <string name="a121">未付款</string>
    <string name="a122">已付款</string>
    <string name="a123">已完成</string>
    <string name="a124">申诉中</string>
    <string name="a125">等待买家付款</string>
    <string name="a126">CTC担保交易</string>
    <string name="a127">总价:</string>
    <string name="a128">订单号</string>
    <string name="a129">支付宝账户</string>
    <string name="a130">下单时间</string>
    <string name="a131">订单备注</string>
    <string name="a132">取消订单</string>
    <string name="a133">确认付款</string>
    <string name="a134">充值数量</string>
    <string name="a135">100π起</string>
    <string name="a136">Discovery账号</string>
    <string name="a137">请输入您的π账号</string>
    <string name="a138">联系电话</string>
    <string name="a139">请输入您的手机号码</string>
    <string name="a140">充值单号</string>
    <string name="a141">充值数量</string>
    <string name="a142">联系方式</string>
    <string name="a143">复制账号</string>
    <string name="a144">转账单号</string>
    <string name="a145">请输入π转账单号</string>
    <string name="a146">我已转π</string>
    <string name="a147">提交成功</string>
    <string name="a148">系统会在10分钟处理完成</string>
    <string name="a149">请留意您的π资产余额</string>
    <string name="a150">修改支付密码</string>
    <string name="a151">忘记支付密码</string>
    <string name="a152">请设置支付密码，建议勿与登录密码相同</string>
    <string name="a153">新支付密码</string>
    <string name="a154">昵称</string>
    <string name="a155">国籍</string>
    <string name="a156">注册时间</string>
    <string name="a157">π</string>
    <string name="a158">买入数量</string>
    <string name="a159">请输入5&#8211;50之间的整数</string>
    <string name="a160">交易保证金</string>
    <string name="a161">请选择付款方式</string>
    <string name="a162">银联转账</string>
    <string name="a163">订单发布成功</string>
    <string name="a164">3s后返回首页</string>
    <string name="a165">币种</string>
    <string name="a166">最 新 价</string>
    <string name="a167">涨跌幅</string>
    <string name="a168">语言选择</string>
    <string name="a169">资金密码</string>
    <string name="a170">实名认证</string>
    <string name="a171">手机号码</string>
    <string name="a172">修改密码</string>
    <string name="a173">个人资料</string>
    <string name="a174">关于我们</string>
    <string name="a175">版本升级</string>
    <string name="a176">退出登录</string>
    <string name="a177">分享有奖</string>
    <string name="a178">添加银行卡</string>
    <string name="a179">银行卡</string>
    <string name="a180">提现数量</string>
    <string name="a181">$</string>
    <string name="a182">10.00000起</string>
    <string name="a183">≈￥</string>
    <string name="a184">64.00起</string>
    <string name="a185">可用USD</string>
    <string name="a186">全部提现</string>
    <string name="a187">请输入本人姓名</string>
    <string name="a188">温馨提示:</string>
    <string name="a189">此姓名将作为您充值时需要填写的姓名</string>
    <string name="a190">￥</string>
    <string name="a191">100.00起</string>
    <string name="a192">≈$</string>
    <string name="a193">请汇款至以下账户</string>
    <string name="a194">账户名</string>
    <string name="a195">复制</string>
    <string name="a196">银行账号</string>
    <string name="a197">收款银行</string>
    <string name="a198">开户行</string>
    <string name="a199">取消</string>
    <string name="a200">已完成汇款</string>
    <string name="a201">证件信息</string>
    <string name="a202">账号绑定</string>
    <string name="a203">请输入身份证号</string>
    <string name="a204">手续费折扣</string>
    <string name="a205">等级</string>
    <string name="a206">确定取消订单?</string>
    <string name="a207">立即升级</string>
    <string name="a208">获得30积分</string>
    <string name="a209">积分可用于抵扣交易手续费</string>
    <string name="a210">可买数量:</string>
    <string name="a211">上拉查看最新成交</string>
    <string name="a212">时间</string>
    <string name="a213">单价</string>
    <string name="a215">操作</string>
    <string name="a216">暂无数据</string>
    <string name="a217">新手教程</string>
    <string name="a218">联系客服</string>
    <string name="a219">大盘交易</string>
    <string name="a220">更\t\t多</string>
    <string name="a221">买币</string>
    <string name="a222">用户</string>
    <string name="a223">价格(CNY)</string>
    <string name="a224">卖币</string>
    <string name="a225">\t=\t¥\t\t</string>
    <string name="a226">K线图</string>
    <string name="a227">买</string>
    <string name="a228">卖</string>
    <string name="a229">下滑回到交易页面</string>
    <string name="a230">单价(CNY)</string>
    <string name="a231">我的订单</string>
    <string name="a232">我的发布</string>
    <string name="a233">我的积分</string>
    <string name="a234">帮助中心</string>
    <string name="a235">设置</string>
    <string name="a236">暂无记录</string>
    <string name="a237">下单时间:</string>
    <string name="a238">订单号:</string>
    <string name="a239">数量:</string>
    <string name="a240">币种:</string>
    <string name="a241">总价:</string>
    <string name="a242">总USD</string>
    <string name="a243">CTC数字资产交易所</string>
    <string name="a244">交易手续费\n%1$s%2$s</string>
    <string name="a245">VIP最高享%1$d折手续费</string>
    <string name="a246">去开通</string>
    <string name="a247">未开通vip</string>
    <string name="a248">功能暂未开放</string>
    <string name="a249">支付宝绑定</string>
    <string name="a250">支付宝账号:</string>
    <string name="a251">修改</string>
    <string name="a252">微信绑定</string>
    <string name="a253">微信账号:</string>
    <string name="a254">请确认将要绑定的账号为本人所有\n微信账号将作为你在交易中的收款账号</string>
    <string name="a255">支付宝账户名称</string>
    <string name="a256">支付宝名称不能为空</string>
    <string name="a257">支付宝账号不能为空</string>
    <string name="a258">微信号不能为空</string>
    <string name="a259">加载中&#8230;</string>
    <string name="a260">绑定成功</string>
    <string name="a261">发送成功</string>
    <string name="a262">充值</string>
    <string name="a263">提现</string>
    <string name="a264">充币</string>
    <string name="a265">提币</string>
    <string name="a266">最小提币数量为：%1$s %2$s。\n为保障资金安全，当您的账户密码修改，使用新地址提币，\n我们会对提币进行人工审核，请耐心等待工作人员电话或邮件\n联系，请务必确认电脑及浏览器安全，防止信息被篡改或泄露。</string>
    <string name="a267">%1$s提币</string>
    <string name="a268">相机权限不可用</string>
    <string name="a269">扫描二维码需要开启相机权限,请到设置中添加权限</string>
    <string name="a270">立即开启</string>
    <string name="a271">权限获取成功</string>
    <string name="a272">请在-应用设置-权限-中，允许CTC使用相机权限</string>
    <string name="a273">%1$s充币</string>
    <string name="a274">请勿向上述地址充值任何非%1$s资产，否则资产将不可找回。\n您充值至上述地址后，需要整个网络节点的确认，1次网络确\n认后进入冻结，6次网络确认后可用。\n最小充值金额：0.001%2$s，小于最小金额的充值将不会上账。</string>
    <string name="a275">复制成功</string>
    <string name="a276">保存成功</string>
    <string name="a277">存储权限不可用</string>
    <string name="a278">保存文件需要存储权限,请到设置中添加权限</string>
    <string name="a279">请在-应用设置-权限-中，允许CTC使用存储权限来保存用户数据</string>
    <string name="a280">卖出</string>
    <string name="a281">卖出%1$s</string>
    <string name="a282">价格不能为空</string>
    <string name="a283">数量不能为空</string>
    <string name="a284">不能买自己的单</string>
    <string name="a516">法币</string>
    <string name="a517">币币</string>
    <string name="a548">所属支行</string>
    <string name="a549">请输入所属支行</string>
</resources>