<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_modify_pwd"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <com.atkj.ctc.views.EditView
        android:id="@+id/ev_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:evHint="@string/a64" />

    <com.atkj.ctc.views.EditView
        android:id="@+id/ev_vc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:evInfo="@string/a18"
        app:evHint="@string/a65" />
    <com.atkj.ctc.views.EditView
        android:id="@+id/ev_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:evPassWord="true"
        app:evHint="@string/a66" />
    <com.atkj.ctc.views.EditView
        android:id="@+id/ev_new_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:evPassWord="true"
        app:evHint="@string/a67" />
        <TextView
            android:id="@+id/enter"
            android:layout_gravity="center"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginTop="20dp"
            android:text="@string/a56"
            style="@style/button_style"
            android:textColor="@color/white" />
    </LinearLayout>
    
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_modify_success"
        android:layout_marginTop="103dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chenggong"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/a69"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/enter2"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginTop="96dp"
            style="@style/button_style"
            android:text="@string/a70"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>