<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/bg"
        android:id="@+id/ll_modify"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.atkj.ctc.views.MyItemView
            android:id="@+id/miv_modify_pwd"
            android:layout_width="match_parent"
            app:title="@string/a150"
            android:layout_height="wrap_content"/>
        <com.atkj.ctc.views.MyItemView
            android:id="@+id/miv_forget_pwd"
            android:layout_width="match_parent"
            app:title="@string/a151"
            app:isLineVisible="false"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!--新增密码-->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/ll_add"
        android:background="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_pwd_title"
            android:layout_width="wrap_content"
            android:textColor="@color/f888888"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/a152"
            />
        
        <com.atkj.ctc.views.PswInputView
            android:id="@+id/piv"
            app:border_color="@color/fc0c0c0"
            app:dot_color="@color/f333333"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/bt_enter"
            android:text="@string/a56"
            style="@style/button_style"
            />

    </LinearLayout>
    <!--修改密码-->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/ll_modify_pwd"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <com.atkj.ctc.views.EditView
            android:id="@+id/ev_verification_code"
            android:layout_width="match_parent"
            app:evHint="@string/a65"
            app:evInfo="@string/a18"
            android:layout_height="wrap_content"/>

        <com.atkj.ctc.views.EditView
            android:id="@+id/ev_new_pwd"
            android:layout_width="match_parent"
            app:evHint="@string/a153"
            app:evPassWord="true"
            android:layout_height="wrap_content"/>

        <com.atkj.ctc.views.EditView
            android:id="@+id/ev_new_pwd2"
            android:layout_width="match_parent"
            app:evHint="@string/a67"
            app:evPassWord="true"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginTop="20dp"
            android:id="@+id/bt_forget_enter"
            android:text="@string/a56"
            style="@style/button_style"
            />


    </LinearLayout>










</LinearLayout>